<?xml version="1.0"?>
<package format="2">
  <name>jetbot_ds4_manual</name>
  <version>0.0.0</version>
  <description>The jetbot_ds4_manual package</description>
  <maintainer email="chuong19111996@gmail.com">chuong</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend> 
  <depend>std_msgs</depend> 
  <depend>ds4_driver</depend> 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
